# rag-rack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  all_dois.txt  mkdocs.yml  pyproject.toml  to_download.txt
.github/workflows/: ci.yml
benchmarks/: BENCHMARKS.md  PUBLISHED_alce.md  PUBLISHED_litqa2.md  harry_potter_micro_20260510_224841.md  harry_potter_micro_20260510_225430.md  harry_potter_micro_20260510_230151.md
benchmarks/baselines/: README.md  alce_asqa_gtr100_haiku_constrained_v1.md  alce_asqa_gtr100_haiku_prompted_v1.md  alce_asqa_oracle_haiku_constrained_v1.md  alce_asqa_oracle_haiku_constrained_v2.md  alce_asqa_oracle_haiku_prompted_v1.md  alce_asqa_oracle_haiku_prompted_v2.md  alce_eli5_bm25100_haiku_prompted_v1.md  alce_qampari_gtr100_haiku_constrained_v1.md  alce_qampari_gtr100_haiku_prompted_v1.md  gemini_v1_min0.md  gemma4_v1_min0.md  gemma4_v2_min150.md  smoke_litqa2_haiku.md  smoke_litqa2_haiku_cohere.md  v10_litqa2_sonnet_cohere.md  v11_litqa2_haiku_constrained.md  v1_phase1_baseline.md  v2_min100_expanded29.md  v2_phase2_29q_noreranker.md  v2_phase2_baseline.md  v3_phase2_baseline.md  v4_phase4_hhem.md  v5_phase4_hhem_surgical.md  v5_phase4_hhem_surgical_rerun.md  v6_prompt_hhem_010.md  v6_prompt_hhem_015.md  v6_prompt_hhem_020.md  v6_prompt_hhem_030.md  v6_prompt_no_verifier.md  v7_litqa2_haiku.md  v8_litqa2_haiku_cohere.md  v9_litqa2_haiku_cohere.md
configs/: default.yaml
examples/: ask_pdf.py  inspect_parser.py
scripts/: audit_refusals.py  compare_baselines.sh  fetch_alce.py  fetch_faithfulness_benches.py  fetch_litqa2.py  litqa2_pdfs.py  llm_judge_alce.py  run_litqa2_pipeline.sh  v6_sweep.sh
src/verifiable_rag/: __init__.py  pipeline.py
src/verifiable_rag/chunkers/: __init__.py  parent_child.py  parent_expander.py
src/verifiable_rag/embedders/: __init__.py  cohere_embedder.py  sentence_transformer.py  voyage.py
src/verifiable_rag/eval/: __init__.py  __main__.py  metrics.py  reporter.py  runners.py
src/verifiable_rag/eval/datasets/: __init__.py  _passage_aligner.py  _pdf_fetcher.py  alce.py  harry_potter.py  litqa2.py
src/verifiable_rag/generators/: __init__.py  constrained.py  prompted.py  safe.py
src/verifiable_rag/indexers/: __init__.py  hybrid.py  lance.py
src/verifiable_rag/models/: __init__.py  answer.py  chunk.py  document.py  span.py
src/verifiable_rag/parsers/: __init__.py  _cache.py  _sentence_splitter.py  _serde.py  composite.py  docling_parser.py  pymupdf_parser.py
src/verifiable_rag/rerankers/: __init__.py  bge.py  cohere_reranker.py
src/verifiable_rag/verifiers/: __init__.py  hhem.py
tests/: conftest.py  test_pipeline.py
tests/chunkers/: conftest.py  test_parent_child.py  test_parent_expander.py
tests/embedders/: test_cohere_embedder.py  test_sentence_transformer.py  test_voyage.py
tests/eval/: test_benchmark.py  test_litqa2.py  test_metrics.py  test_passage_aligner.py  test_reporter.py  test_runner.py
tests/generators/: test_constrained.py  test_prompted.py  test_safe.py
tests/indexers/: test_bm25.py  test_hybrid.py  test_lance.py
tests/models/: test_answer.py  test_chunk.py  test_document.py  test_span.py
tests/parsers/: conftest.py  test_cache.py  test_composite.py  test_docling_parser.py  test_pymupdf_parser.py  test_sentence_splitter.py  test_serde.py
tests/parsers/fixtures/: .gitkeep
tests/rerankers/: test_bge.py  test_cohere_reranker.py
tests/verifiers/: test_hhem.py
(+2 files in other folders)
