[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verifiable-rag"
version = "0.1.0"
description = "Document-grounded Q&A with sentence-level citations and faithfulness verification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Rishi Gulati", email = "gulatirishi29@gmail.com" }]
keywords = ["rag", "citations", "faithfulness", "nlp", "llm", "retrieval"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core is intentionally minimal — heavy deps are opt-in extras
dependencies = []

[project.optional-dependencies]
docling  = ["docling>=2.0"]
pymupdf  = ["pymupdf>=1.24"]
wtpsplit = ["wtpsplit>=2.0"]
bge      = ["sentence-transformers>=3.0", "torch>=2.2"]
lancedb  = ["lancedb>=0.8"]
bm25     = ["bm25s>=0.1"]
cohere   = ["cohere>=5.0"]
litellm  = ["litellm>=1.40"]
# Pin NLI model wrappers — silent upstream updates have wrecked benchmarks
hhem     = ["transformers==4.44.*", "torch>=2.2"]
minicheck = ["transformers==4.44.*", "torch>=2.2"]
eval     = ["ragas>=0.1", "deepeval>=0.21", "pandas>=2.0"]
gradio   = ["gradio>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "hatchling>=1.24",
]
all = [
    "verifiable-rag[docling,pymupdf,wtpsplit,bge,lancedb,bm25,litellm,hhem,minicheck,eval]",
]

[project.urls]
Repository = "https://github.com/rishisg2/verifiable-rag"

[tool.hatch.build.targets.wheel]
packages = ["src/verifiable_rag"]

# ---------------------------------------------------------------------------
# Ruff — lint + format
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "ANN"]
ignore = [
    "ANN101", "ANN102",   # self/cls type annotations
    "ANN401",             # Any in generics is sometimes necessary
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]  # no annotation enforcement in tests

# ---------------------------------------------------------------------------
# Mypy — strict on library code only
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/verifiable_rag"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "docling.*",
    "docling_core.*",
    "wtpsplit.*",
    "fitz.*",
    "lancedb.*",
    "bm25s.*",
    "sentence_transformers.*",
    "cohere.*",
    "litellm.*",
    "transformers.*",
    "ragas.*",
    "deepeval.*",
    "wtpsplit.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "smoke: fast smoke tests — run on every commit",
    "eval: tests requiring benchmark datasets",
    "slow: slow integration tests",
]
